[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "equity-pricing"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["numpy", "scipy", "matplotlib"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
demo = ["pandas", "jupyter"]

[tool.setuptools.packages.find]
where = ["src"]
